    Failure (`c.t.f.Failure.Rejected`).
  
  * finagle-core: `c.t.f.Failure` convenience constructors (e.g., `Failure.Cause`,
    `Failure.Rejected`) were removed in favor of uniform flag treatment, and clean
    separation of attributes from interpretation of those attributes.

  * finagle-core: `ExitGuard` usage is now private to finagle.

Runtime Behavior Changes
~~~~~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `com.twitter.finagle.service.StatsFilter` no longer requires a
    `com.twitter.finagle.stats.RollupStatsReceiver` for correct behaviour, and
    providing one will double count failures.

  * finagle-core: `com.twitter.finagle.factory.TimeoutFactory` will fail with
    a retryable `com.twitter.finagle.Failure` when it times out.

  * finagle-core: `com.twitter.finagle.pool.WatermarkPool` will fail with
    an interrupted `com.twitter.finagle.Failure` when it is interrupted while
    waiting or trying to establish a connection.  It has previously failed with
    a `com.twitter.finagle.WriteException` when trying to establish a
    connection, but it's incorrect to retry on an interruption.

  * finagle-core: `com.twitter.fiangle.RetryPolicy`'s `RetryableWriteException`
    and `WriteExceptionsOnly` will not retry on `com.twitter.finagle.Failure`s
    that are marked `InterruptedBy`, even if they are `Retryable`.

  * finagle-core: The error message provided by `c.t.f.NoBrokersAvailableException`
    prints both the base and local Dtabs.
  
  * finagle-core: Stats produced by `com.twitter.finagle.factory.BindingFactory`
    are now scoped with the "namer" prefix rather than "interpreter". The total
    latency associated with Name binding is now recorded in the "bind_latency_ms"
    stat.

  * finagle-core: The "service_creation/service_acquisition_latency_ms" stat
    produced by `com.twitter.finagle.factory.StatsFactoryWrapper` no longer
    includes time spent in name resolution, which is now covered by
    "namer/bind_latency_us" as discussed above.
